--- a/MeetTheTeam.html
+++ b/MeetTheTeam.html
@@ -9,12 +9,15 @@
 <body>
 <nav class="navbar">
     <div class="container">
-        <h1 class="logo">Mr. Olympia</h1>
-        <ul class="nav">
-            <li><a href="home.html">Suplimente</a></li>
-            <li><a href="AccesoriiSala.html">Povestea Noastra</a></li>
-            <li><a href="MeetTheTeam.html">Meet The Team</a></li>
-        </ul>
+        <div class="dropdown">
+            <h1 class="logo">Mr. Olympia</h1>
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="home.html">Suplimente</a>
+                <a href="AccesoriiSala.html">Povestea noastra</a>
+                <a href="MeetTheTeam.html">Meet The Team</a>
+            </div>
+        </div>
     </div>
 </nav>
 
