--- a/AccesoriiSala.html
+++ b/AccesoriiSala.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Accesorii Sala</title>
+    <title>Povestea Noastra</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/79bc6eff37.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar">
     <div class="container">
-        <h1 class="logo">Mr. Olympia</h1>
-        <ul class="nav">
-            <li><a href="home.html">Suplimente</a></li>
-            <li><a href="AccesoriiSala.html">Povestea Noastra</a></li>
-            <li><a href="MeetTheTeam.html">Meet The Team</a></li>
-        </ul>
+        <div class="dropdown">
+            <h1 class="logo">Mr. Olympia</h1>
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="home.html">Suplimente</a>
+                <a href="AccesoriiSala.html">Povestea noastra</a>
+                <a href="MeetTheTeam.html">Meet The Team</a>
+            </div>
+        </div>
     </div>
 </nav>
 
